--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,25 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false, // Disable global format on save to avoid conflicts with specific formatters
+  "editor.defaultFormatter": "esbenp.prettier-vscode", // Set default formatter to Prettier for all files
+
   "[php]": {
-    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client" // or "junstyle.php-cs-fixer" if preferred
   },
-  "editor.formatOnSave": true,
-  "intelephense.format.enable": true,
-  "php-cs-fixer.onsave": false,  // set to true if you want it
-  "files.associations": {
-    "*.php": "php"
-  }
+
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+
+  "php-cs-fixer.onsave": false, // disable if not using it
+  "intelephense.format.enable": true
 }
+// Note: Make sure to install the required extensions for the formatters you choose.
+// You can also customize the settings further based on your preferences and the extensions you are using.
